# lojamaeto-webscrapping

./: .env.example  .gitignore  README.md  pyproject.toml
data/: maeto.db
scripts/: create_database.py
src/app/: config.py  logger.py  main.py
src/app/domain/: info_tecnica.py  produto.py
src/app/persistence/: bootstrap.py  database.py  mappers.py
src/app/persistence/models/: info_tecnica_orm.py  produto_orm.py
src/app/persistence/repository/: info_tecnica_repository.py  produto_repository.py
src/app/scraping/: client.py  normalizers.py
src/app/scraping/parsers/: product_parser.py  produto_parser.py  search_parser.py
src/app/scrapping/: normalizers.py  product_parser.py
src/app/scrapping/parsers/: product_parser.py  search_result_parser.py
src/app/services/: ingest_products.py  ingest_produtos.py
tests/: conftest.py  test_normalizers.py  test_parser.py  test_product_parser.py  test_search_result_parser.py
tests/fixtures/: ventilador_item1.html  ventilador_item2_desconto.html  ventilador_item2_indisponivel.html  ventilador_item3_desconto.html  ventilador_lista.html
tests/persistance/: test_repository.py
tests/scraping/: test_normalizers.py  test_product_parser.py  test_search_result_parser.py
