[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lojamaeto-scraper"
version = "0.1.0"
description = "Web scraping da Loja Maeto"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "beautifulsoup4>=4.14.3",
    "lxml>=6.0.2",
    "pydantic>=2.12.5",
    "typer>=0.24.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.9",
  "black>=26.3.1",
  "mypy>=1.20.0",
]

[project.scripts]
scraper = "app.main:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
warn_unused_configs = true